Небольшая реализация игры (нужен рефакторинг)

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,6 +1,10 @@
-deadrun:
-  max-players: 2
-  lobby-spawn :
-  material-block-remove: DIAMOND_BLOCK
-massages:
-  join-player: "Игрок %1s присоединился к игре"
+arena:
+  max-players: 10
+  list-remove-block: SAND, GRAVEL
+  complete: false
+  dead-zone: 20
+messages:
+  join-player: "&7Игрок &a<name> &7присоединился к игре &7(&a<n>&7/&a<s>&7)"
+  leave-player: "&7Игрок &a<name> &7покинул игру &7(&a<n>&7/&a<s>&7)"
+  start: "&7Игра начнется через &a<time> &7секунд."
+
